--- a/Resources/default.css
+++ b/Resources/default.css
@@ -66,14 +66,17 @@ h3 {
 }
 
 aside {
-	width: 250px;
+	width: 230px;
 	position: absolute;
 	left: 0px;
 	top: 0px;
-	height: 100%;
+	height: calc(100% - 70px);
+	margin: 10px;
 	overflow: hidden;
 	background-color: #EFEFEF;
-	border-right: solid 1px rgba(0,0,0,0.2);
+	border: solid 1px rgba(0,0,0,0.2);
+	box-shadow: inset 2px 2px 2px rgba(0,0,0,0.05);
+	border-radius: 6px;
 }
 
 article {
@@ -102,7 +105,7 @@ article {
 }
 
 .catena-block.selected, aside li.selected {
-	background-color: rgba(0,55,100,0.1);
+	background-color: rgba(0,55,100,0.2);
 }
 
 .catena-ajax-block {
@@ -171,7 +174,6 @@ nav {
 	padding-left: 10px;
 	margin-bottom: 10px;
 	height: 50px;
-	border-bottom: solid 1px rgba(0,0,0, 0.2);
 }
 
 nav h1, nav span, nav input, nav {
@@ -280,9 +282,9 @@ dl dt i {
 
 .catena-tabs > ul {
 	display: block;
-	background-color: #EFEFEF;
+	background-color: rgb(0,55,100);
+	border-bottom: solid 2px white;
 	margin: 0px;
-	border-bottom: solid 1px rgba(0,0,0,0.1);
 }
 
 .catena-tabs > ul > li {
@@ -292,11 +294,15 @@ dl dt i {
 	padding: 10px;
 	text-align: center;
 	font-weight: bold;
+	color: white;
 	cursor: pointer;
+	border-top-left-radius: 3px;
+	border-top-right-radius: 3px;
 }
 
 .catena-tabs > ul > li.selected {
 	background-color:white;
+	color: rgb(77,77,77);
 }
 
 .catena-tabs .catena-tab {
