--- a/Resources/default.css
+++ b/Resources/default.css
@@ -26,7 +26,7 @@ main button {
 	margin: 2px;
 	padding: 6px;
 	border-radius: 6px;
-	background-color: white;
+	background-color: #FBFBFB;
 	background: linear-gradient(to bottom,rgb(255,255,255)  80%, rgb(240,240,240) 100%);
 	border: solid 1px #A0A0A0;
 	cursor: pointer;
@@ -98,7 +98,7 @@ article {
 	top: 0px;
 	height: 100%;
 	overflow: hidden;
-	background-color: white;
+	background-color: #FBFBFB;
 	padding-left: 5%;
 	padding-right: 5%;
 }
@@ -185,6 +185,10 @@ nav {
 	margin-bottom: 10px;
 	height: 50px;
 	overflow: hidden;
+}
+
+input {
+	padding: 3px;
 }
 
 nav h1, nav span, nav input, nav {
@@ -317,14 +321,14 @@ dl dt i {
 }
 
 .catena-tabs > ul > li.selected {
-	background-color:white;
+	background-color: #FBFBFB;
 	color: rgb(77,77,77);
 }
 
 .catena-tabs .catena-tab {
 	display: none;
 	position: relative;
-	background-color: white;
+	background-color: #FBFBFB;
 	border-radius: 6px;
 }
 
@@ -365,7 +369,7 @@ th code, th a {
 }
 
 .catena-transaction {
-	background: linear-gradient(to bottom,rgba(255,255,255,0.5) 10%, rgba(187,224,227,0.5) 30%, rgba(0,55,100, 0.2) 100%);
+	background-color: white;
 	border: solid 1px #A0A0A0;
 	box-shadow: 3px 3px 3px rgba(0,0,0,0.05);
 	border-radius: 6px;
