--- a/Resources/default.css
+++ b/Resources/default.css
@@ -22,6 +22,10 @@ body {
 	overflow: hidden;
 }
 
+p {
+	margin-bottom: 0.8em;
+}
+
 main button {
 	margin: 2px;
 	padding: 6px;
@@ -157,6 +161,10 @@ table tr {
 	padding: 5px;
 	border: none;
 	border-collapse: collapse;
+}
+
+table tr:hover {
+	background-color: #E0E0E0 !important;
 }
 
 table tr:nth-child(2n+1) {
@@ -369,13 +377,12 @@ th code, th a {
 }
 
 .catena-transaction {
-	background-color: white;
-	border: solid 1px #A0A0A0;
-	box-shadow: 3px 3px 3px rgba(0,0,0,0.05);
-	border-radius: 6px;
-	padding: 5px;
-	margin: 5px;
 	width: auto;
+	box-shadow: inset 2px 2px 2px rgba(0,0,0,0.05);
+	background-color: #EFEFEF;
+	padding: 5px;
+	padding-left: 15px;
+	border-radius: 6px;
 }
 
 button:disabled {
@@ -384,6 +391,45 @@ button:disabled {
 
 article h3 {
 	color: rgba(0,0,0,0.5);
-	margin-left: 10px;
+	margin-bottom: 10px;
+	margin-top: 10px;
 	text-shadow: 1px 1px 0px rgba(255,255,255,0.8);
 }
+
+.catena-expander > button {
+	margin-left: 5px;
+}
+
+.catena-expander > button.cancel {
+	float: right;
+	border: none;
+	background: transparent;
+	box-shadow: none;
+}
+
+.catena-expander > button.cancel i {
+	color: red;
+}
+
+.catena-expander.expanded > button.handle {
+	border: solid 1px #A0A0A0;
+	border-bottom: solid 1px white;
+	box-shadow: none;
+	background: white;
+	border-bottom-left-radius: 0px;
+	border-bottom-right-radius: 0px;
+	margin-bottom: -1px;
+	z-index: 2;
+}
+
+.catena-expander > div {
+	background-color: white;
+	border: solid 1px #A0A0A0;
+	box-shadow: 3px 3px 3px rgba(0,0,0,0.05);
+	border-radius: 6px;
+	border-top-left-radius: 0px;
+	padding: 5px;
+	margin: 5px;
+	margin-top: 0px;
+}
+
