Make web client responsive

--- a/Resources/default.css
+++ b/Resources/default.css
@@ -87,7 +87,8 @@ aside {
 	top: 0px;
 	height: calc(100% - 20px);
 	margin: 10px;
-	overflow: hidden;
+	overflow-x: hidden;
+	overflow-y: auto;
 	background-color: #EFEFEF;
 	border: solid 1px rgba(0,0,0,0.2);
 	box-shadow: inset 2px 2px 2px rgba(0,0,0,0.05);
@@ -433,3 +434,17 @@ article h3 {
 	margin-top: 0px;
 }
 
+@media screen and (max-width: 480px) {
+	aside {
+		display: block;
+		width: calc(100% - 20px);
+		height: 150px;
+		position: relative;
+	}
+
+	article {
+		width: 100%;
+		left: 0px;
+		position: relative;
+	}
+}
