--- a/Resources/default.css
+++ b/Resources/default.css
@@ -448,3 +448,17 @@ article h3 {
 		position: relative;
 	}
 }
+
+main center {
+	color: white;
+	top: 10%;
+    position: absolute;
+    margin-left: auto;
+    margin-right: auto;
+    display: block;
+    width: 100%;
+}
+
+main center i {
+	color: rgba(253,204,0,1.0);
+}
