--- a/Resources/default.css
+++ b/Resources/default.css
@@ -71,7 +71,7 @@ h2 {
 	font-size: 11pt;
 	margin-bottom: 10px;
 	margin-top: 10px;
-	display: inline-block;
+	display: block;
 }
 
 h3 {
@@ -461,4 +461,21 @@ main center {
 
 main center i {
 	color: rgba(253,204,0,1.0);
+}
+
+p.info, p.error {
+	display: block;
+	border: solid 1px rgba(153,204,0,0.7);
+	border-radius: 3px;
+	margin-top: 5px;
+	margin-bottom: 5px;
+	background: linear-gradient(to bottom,rgba(153,204,0,0.4)  20%, rgba(153,204,0,0.5) 40%);
+	box-shadow: inset 1px 2px 0px rgba(0,0,0,0.05);
+	padding: 5px;
+	text-shadow: 0px 1px rgba(255,255,255,0.5);
+}
+
+p.error {
+	border: solid 1px rgba(236,0,0,0.7);
+	background: linear-gradient(to bottom,rgba(236,0,0,0.3)  20%, rgba(236,0,0,0.5) 40%);
 }
