--- a/Resources/default.css
+++ b/Resources/default.css
@@ -356,7 +356,7 @@ dl dt i {
 	height: 100%;
 }
 
-textarea.catena-sql {
+textarea.catena-sql, textarea.catena-code {
 	width: 100%;
 	min-height: 100px;
 	font-family: Courier New, Courier, monospace;
